# vrf-rfc9381

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: consts.rs  ec.rs  error.rs  lib.rs  rsa.rs
src/ec/: edwards25519.rs  p256.rs  util.rs
tests/: test-vectors.rs
tests/test-vectors/: ecvrf.rs
tests/test-vectors/test-vector-data/: edwards25519_ell2.json  edwards25519_tai.json  p256_sswu.json  p256_tai.json
