[package]
name = "vrf-rfc9381"
version = "0.0.3"
edition = "2024"
readme = "README.md"
description = "Rust implementation of VRFs (Verifiable Random Functions) as described in RFC9381"
documentation = "https://docs.rs/vrf-rfc9381"
repository = "https://github.com/OtaK/vrf-rfc9381"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["vrf", "rfc9381", "ecvrf"]
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.85"

[package.metadata.docs.rs]
features = ["ec", "edwards25519", "p256", "hazmat"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = []
hazmat = [
] # /!\ WARNING: This is used in test vectors to perform equality checks on the inner scalars in Private Keys.
ec = []
edwards25519 = ["ec", "dep:curve25519-dalek"]
p256 = ["ec", "dep:p256", "dep:rfc6979", "dep:hash2curve"]
# rsa = ["dep:rsa"]

[dependencies]
thiserror = "2"
signature = "3.0.0-rc.4"
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
digest = "0.11.0-rc.2"
sha2 = "0.11.0-rc.2"
rfc6979 = { version = "0.5.0-rc.2", optional = true }
hash2curve = { version = "0.14.0-rc.3", optional = true }
# rsa = { version = "0.9", optional = true }

# Go back to mainline version once this gets merged and to the crates.io
# version when it appears there
[dependencies.curve25519-dalek]
version = "5.0.0-pre.1"
optional = true
features = ["digest", "legacy_compatibility", "group"]

[dependencies.p256]
version = "0.14.0-rc.0"
features = ["std", "arithmetic", "hash2curve", "group-digest"]
default-features = false
optional = true

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[[test]]
name = "test-vectors"
required-features = ["edwards25519", "p256", "hazmat"]
harness = false

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex-literal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
pretty_assertions = "1.4"
libtest-mimic = "0.8"
color-eyre = "0.6"

# Go back to mainline once this is merged as we need the support for Option<T>
[dev-dependencies.faster-hex]
git = "https://github.com/nervosnetwork/faster-hex.git"
rev = "a0129dec7b4a2266374c0f58650e2c8bf4386330"
features = ["serde"]
